# sigmorphon-glossing-st-2023

./: README.md  preprocessing.ipynb  pyproject.toml  utils.py
