[tool.poetry]
name = "sigmorphon-glossing-st-2023"
version = "0.0.1"
description = "Notebooks for shared task sigmorphon 2023 on interlinear glossing"
authors = ["Diego Barriga <dbarriga@ciencias.unam.mx>", "Ximena Guitierrez <>", "Victor Mijangos <>"]
license = "MPL"
readme = "README.md"
packages = [{include = "sigmorphon_glossing_st_2023"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"
pandas = "^1.5.3"
jupyter = "^1.0.0"
jupyterlab = "^3.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
